--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,14 @@
     "googleapis": "^118.0.0",
     "morgan": "^1.10.0",
     "cookie-parser": "^1.4.6",
-    "marked": "^9.1.6"
+    "marked": "^9.1.6",
+    "json2csv": "^6.1.0",
+    "validator": "^13.11.0",
+    "express-validator": "^7.0.1",
+    "redis": "^4.6.0",
+    "winston": "^3.11.0",
+    "compression": "^1.7.4",
+    "express-slow-down": "^2.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
