--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,20 +1,53 @@
-FROM node:20-alpine as build
+# Multi-stage build for production optimization
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
-RUN npm ci
+# Copy package files
+COPY backend/package*.json ./
+COPY backend/tsconfig.json ./
 
-COPY . .
+# Install dependencies
+RUN npm ci --only=production && npm cache clean --force
+
+# Copy source code
+COPY backend/ ./
+
+# Build the application
 RUN npm run build
 
-FROM node:20-alpine
+# Production stage
+FROM node:18-alpine AS production
+
+# Install security updates
+RUN apk update && apk upgrade && apk add --no-cache dumb-init
+
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs && adduser -S nodejs -u 1001
 
 WORKDIR /app
-COPY --from=build /app/dist ./dist
-COPY package.json package-lock.json ./
-RUN npm ci --production
 
+# Copy built application
+COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
+COPY --from=builder --chown=nodejs:nodejs /app/node_modules ./node_modules
+COPY --from=builder --chown=nodejs:nodejs /app/package.json ./package.json
+
+# Copy additional files
+COPY --chown=nodejs:nodejs backend/templates ./templates
+
+# Create directories for uploads and logs
+RUN mkdir -p uploads logs && chown -R nodejs:nodejs uploads logs
+
+# Switch to non-root user
+USER nodejs
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:5001/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
+
+# Expose port
 EXPOSE 5001
 
+# Start application with dumb-init for proper signal handling
+ENTRYPOINT ["dumb-init", "--"]
 CMD ["node", "dist/server.js"]
