--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,16 +1,62 @@
-FROM node:20-alpine as build
+# Multi-stage build for production optimization
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
-RUN npm ci
+# Copy package files
+COPY frontend/package*.json ./
 
-COPY . .
+# Install dependencies
+RUN npm ci && npm cache clean --force
+
+# Copy source code
+COPY frontend/ ./
+
+# Build the application
+ARG REACT_APP_API_URL
+ARG REACT_APP_ENVIRONMENT=production
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+ENV REACT_APP_ENVIRONMENT=$REACT_APP_ENVIRONMENT
+
 RUN npm run build
 
-FROM nginx:alpine
+# Production stage with Nginx
+FROM nginx:alpine AS production
 
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+# Install security updates
+RUN apk update && apk upgrade
 
+# Copy built application
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Copy custom nginx configuration
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy PWA files to root
+COPY --from=builder /app/dist/manifest.webmanifest /usr/share/nginx/html/
+COPY --from=builder /app/dist/sw.js /usr/share/nginx/html/
+
+# Create non-root user for nginx
+RUN addgroup -g 1001 -S nginx && adduser -S nginx -u 1001 -G nginx
+
+# Set proper permissions
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /var/log/nginx && \
+    chown -R nginx:nginx /etc/nginx/conf.d
+
+# Create nginx PID directory
+RUN mkdir -p /var/run/nginx && chown -R nginx:nginx /var/run/nginx
+
+# Switch to non-root user
+USER nginx
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 1
+
+# Expose port
 EXPOSE 80
+
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
