--- a/render.yaml
+++ b/render.yaml
@@ -1,28 +1,5 @@
 services:
   - type: web
-    name: hnv-frontend
-    env: static
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/dist
-    headers:
-      - path: /*
-        name: X-Frame-Options
-        value: DENY
-      - path: /*
-        name: X-Content-Type-Options
-        value: nosniff
-      - path: /*
-        name: Referrer-Policy
-        value: strict-origin-when-cross-origin
-      - path: /*
-        name: Permissions-Policy
-        value: camera=(), microphone=(), geolocation=()
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-
-  - type: web
     name: hnv-backend
     env: node
     plan: starter
@@ -32,23 +9,36 @@ services:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 10000
-      - key: MONGODB_URI
-        fromService:
-          type: pserv
+        value: 5001
+      - key: MONGO_URI
+        fromDatabase:
           name: hnv-mongodb
+          property: connectionString
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: hnv-redis
           property: connectionString
       - key: JWT_SECRET
         generateValue: true
-      - key: SESSION_SECRET
-        generateValue: true
+      - key: CORS_ALLOWED_ORIGINS
+        value: https://hnv-frontend.onrender.com
 
-  - type: pserv
-    name: hnv-mongodb
-    env: docker
+  - type: web
+    name: hnv-frontend
+    env: static
     plan: starter
-    dockerfilePath: ./Dockerfile.mongo
-    disk:
-      name: mongodb-data
-      mountPath: /data/db
-      sizeGB: 1
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/dist
+    envVars:
+      - key: REACT_APP_API_URL
+        value: https://hnv-backend.onrender.com
+
+databases:
+  - name: hnv-mongodb
+    databaseName: hnv_production
+    user: hnv_user
+    plan: starter
+
+  - name: hnv-redis
+    plan: starter
