--- a/backend/package.json
+++ b/backend/package.json
@@ -41,7 +41,15 @@
     "redis": "^4.5.1",
     "winston": "^3.8.2",
     "compression": "^1.7.4",
-    "express-slow-down": "^1.6.0"
+    "express-slow-down": "^1.6.0",
+    "csurf": "^1.11.0",
+    "isomorphic-dompurify": "^2.0.0",
+    "node-cron": "^3.0.2",
+    "ioredis": "^5.3.2",
+    "sharp": "^0.32.6",
+    "socket.io": "^4.7.2",
+    "bull": "^4.11.3",
+    "nodemailer-smtp-transport": "^2.7.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -72,6 +80,10 @@
     "@types/marked": "^6.0.0",
     "@types/express-slow-down": "^1.3.2",
     "@types/json2csv": "^5.0.3",
-    "@types/compression": "^1.7.2"
+    "@types/compression": "^1.7.2",
+    "mongodb-memory-server": "^9.1.1",
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
