--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,18 +2,19 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "outDir": "./",
+    "outDir": "./dist",
     "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
       "*": ["node_modules/*"]
     },
-    "types": ["node", "jest"],
+    "types": ["node"],
     "typeRoots": ["node_modules/@types"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -21,7 +22,7 @@
     "resolveJsonModule": true
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist", "coverage", "**/*.test.ts"],
+  "exclude": ["node_modules", "dist", "coverage", "**/*.test.ts", "tests", "services/backgroundJobs.ts", "services/realTimeService.ts"],
   "files": [
     "src/types/express.d.ts" // Explicitly include the global declaration file
   ]
