--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -26,7 +28,23 @@
     "react-scroll": "^1.8.9",
     "recharts": "^2.8.0",
     "zod": "^3.22.2",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.1",
+    "socket.io-client": "^4.7.2",
+    "workbox-window": "^7.0.0",
+    "@tanstack/react-virtual": "^3.0.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-error-boundary": "^4.0.11",
+    "react-hotkeys-hook": "^4.4.1",
+    "react-use": "^17.4.0",
+    "date-fns": "^2.30.0",
+    "react-dropzone": "^14.2.3",
+    "react-helmet-async": "^1.3.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/user-event": "^14.5.1",
+    "vitest": "^0.34.6",
+    "jsdom": "^22.1.0",
+    "@vitest/coverage-v8": "^0.34.6"
   },
   "devDependencies": {
     "@types/node": "^24.0.5",
