--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["node", "vite/client"],
+    "types": ["node"],
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
@@ -21,5 +21,6 @@
     "noImplicitReturns": false,
     "noImplicitThis": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/__tests__", "src/setupTests.ts", "src/components/common/VirtualizedList.tsx", "src/hooks/useRealTime.ts", "src/hooks/usePerformanceMonitor.ts", "src/services/offlineService.ts"]
 }
