--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: hnv-backend
     env: node
     plan: starter
-    buildCommand: cd backend && npm install && npm run build
+    buildCommand: cd backend && npm install --production
     startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
@@ -32,7 +32,7 @@ services:
     staticPublishPath: frontend/dist
     envVars:
       - key: REACT_APP_API_URL
-        value: https://hnv.onrender.com
+        value: https://hnv-backend.onrender.com
 
 databases:
   - name: hnv-mongodb
