--- a/render.yaml
+++ b/render.yaml
@@ -28,7 +28,7 @@ services:
     name: hnv-frontend
     env: static
     plan: starter
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: cd frontend && npm install && npm run build:skip-tsc
     staticPublishPath: frontend/dist
     envVars:
       - key: REACT_APP_API_URL
