--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: hnv-backend
     env: node
     plan: starter
-    buildCommand: cd backend && npm install --production && echo 'Build complete - using existing JS files'
-    startCommand: node ./backend/server.js
+    buildCommand: cd backend && npm install --production
+    startCommand: cd backend && node server.js
     envVars:
       - key: NODE_ENV
         value: production
@@ -28,7 +28,7 @@ services:
     name: hnv-frontend
     env: static
     plan: starter
-    buildCommand: cd frontend && npm install && npx vite build
+    buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/dist
     envVars:
       - key: REACT_APP_API_URL
