--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "build:skip-tsc": "vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -26,42 +23,15 @@
     "react-hook-form": "^7.45.4",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.15.0",
-    "react-scroll": "^1.8.9",
     "recharts": "^2.8.0",
     "zod": "^3.22.2",
-    "zustand": "^4.4.1",
-    "socket.io-client": "^4.7.2",
-    "workbox-window": "^7.0.0",
-    "@tanstack/react-virtual": "^3.0.0",
-    "react-intersection-observer": "^9.5.2",
-    "react-error-boundary": "^4.0.11",
-    "react-hotkeys-hook": "^4.4.1",
-    "react-use": "^17.4.0",
-    "date-fns": "^2.30.0",
-    "react-dropzone": "^14.2.3",
-    "react-helmet-async": "^1.3.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/user-event": "^14.5.1",
-    "vitest": "^0.34.6",
-    "jsdom": "^22.1.0",
-    "@vitest/coverage-v8": "^0.34.6"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@types/node": "^24.0.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@types/react-scroll": "^1.8.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.0"
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
