--- a/backend/package.json
+++ b/backend/package.json
@@ -1,90 +1,57 @@
 {
-  "name": "hnv-saas-backend",
-  "version": "1.0.0",
-  "description": "Backend for HNV SaaS",
-  "main": "server.js",
+  "name": "hnv-property-management",
+  "version": "2.0.0",
+  "description": "Complete Property Management SaaS Solution",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.ts",
-    "build": "echo 'Using existing compiled JS files'",
-    "build:production": "rm -f server.js && node -e \"console.log('Using existing compiled JS files')\" && ls server.js || echo 'server.js ready'",
-    "test": "jest --detectOpenHandles"
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build": "npm run build:backend && npm run build:frontend",
+    "build:backend": "cd backend && npm run build",
+    "build:frontend": "cd frontend && npm run build",
+    "start": "npm run start:backend",
+    "start:backend": "cd backend && npm start",
+    "start:frontend": "cd frontend && npm run preview",
+    "test": "npm run test:backend && npm run test:frontend",
+    "test:backend": "cd backend && npm test",
+    "test:frontend": "cd frontend && npm test",
+    "lint": "npm run lint:backend && npm run lint:frontend",
+    "lint:backend": "cd backend && npm run lint",
+    "lint:frontend": "cd frontend && npm run lint",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "deploy:production": "npm run build && npm run docker:build",
+    "health-check": "curl -f http://localhost:5001/health || exit 1",
+    "setup": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
-  "dependencies": {
-    "@types/nodemailer": "^6.4.7",
-    "axios": "^1.3.4",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-session": "^1.18.0",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "express-mongo-sanitize": "^2.2.0",
-    "hpp": "^0.2.3",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "pdfkit": "^0.13.0",
-    "zod": "^3.21.4",
-    "googleapis": "^118.0.0",
-    "morgan": "^1.10.0",
-    "cookie-parser": "^1.4.6",
-    "marked": "^9.1.6",
-    "json2csv": "^5.0.7",
-    "validator": "^13.9.0",
-    "express-validator": "^6.15.0",
-    "redis": "^4.5.1",
-    "winston": "^3.8.2",
-    "compression": "^1.7.4",
-    "express-slow-down": "^1.6.0",
-    "csurf": "^1.11.0",
-    "isomorphic-dompurify": "^2.0.0",
-    "node-cron": "^3.0.2",
-    "ioredis": "^5.3.2",
-    "sharp": "^0.32.6",
-    "socket.io": "^4.7.2",
-    "bull": "^4.11.3",
-    "nodemailer-smtp-transport": "^2.7.4"
-  },
+  "keywords": [
+    "property-management",
+    "saas",
+    "real-estate",
+    "tenant-management",
+    "landlord",
+    "react",
+    "nodejs",
+    "mongodb",
+    "typescript"
+  ],
+  "author": "HNV Solutions",
+  "license": "MIT",
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",  
-    "@types/express-session": "^1.18.0",
-    "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^18.14.0",
-    "@types/passport": "^1.0.12",
-    "@types/passport-google-oauth20": "^2.0.11",
-    "@types/pdfkit": "^0.12.9",
-    "@types/supertest": "^2.0.12",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.4.3",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.7",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@types/morgan": "^1.9.9",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/hpp": "^0.2.5",
-    "@types/marked": "^6.0.0",
-    "@types/express-slow-down": "^1.3.2",
-    "@types/json2csv": "^5.0.3",
-    "@types/compression": "^1.7.2",
-    "mongodb-memory-server": "^9.1.1",
-    "@types/jest": "^29.5.5",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
-  }
+    "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Zaad1704/HNV1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Zaad1704/HNV1/issues"
+  },
+  "homepage": "https://hnv-property.onrender.com"
 }
