--- a/backend/package.json
+++ b/backend/package.json
@@ -14,53 +14,61 @@
     "@types/nodemailer": "^6.4.7",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.11.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "express-session": "^1.18.0",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.18.0",
+    "express-slow-down": "^1.6.0",
+    "express-validator": "^6.15.0",
+    "googleapis": "^118.0.0",
+    "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "ioredis": "^5.3.2",
+    "isomorphic-dompurify": "^2.0.0",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^9.0.0",
+    "marked": "^9.1.6",
     "mongoose": "^7.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.13.0",
-    "zod": "^3.21.4",
-    "googleapis": "^118.0.0",
-    "morgan": "^1.10.0",
-    "cookie-parser": "^1.4.6",
-    "marked": "^9.1.6",
-    "json2csv": "^5.0.7",
-    "validator": "^13.9.0",
-    "express-validator": "^6.15.0",
     "redis": "^4.5.1",
-    "winston": "^3.8.2",
-    "compression": "^1.7.4",
-    "express-slow-down": "^1.6.0",
-    "csurf": "^1.11.0",
-    "isomorphic-dompurify": "^2.0.0",
-    "node-cron": "^3.0.2",
-    "ioredis": "^5.3.2",
     "sharp": "^0.32.6",
     "socket.io": "^4.7.2",
-    "bull": "^4.11.3",
-    "nodemailer-smtp-transport": "^2.7.4"
+    "validator": "^13.9.0",
+    "winston": "^3.8.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",  
+    "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.0",
-    "@types/jest": "^29.4.0",
+    "@types/express-slow-down": "^1.3.2",
+    "@types/hpp": "^0.2.5",
+    "@types/jest": "^29.5.5",
+    "@types/json2csv": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/marked": "^6.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.0",
+    "@types/node-cron": "^3.0.11",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/pdfkit": "^0.12.9",
@@ -68,23 +76,13 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.4.3",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.7",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@types/morgan": "^1.9.9",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/hpp": "^0.2.5",
-    "@types/marked": "^6.0.0",
-    "@types/express-slow-down": "^1.3.2",
-    "@types/json2csv": "^5.0.3",
-    "@types/compression": "^1.7.2",
-    "mongodb-memory-server": "^9.1.1",
-    "@types/jest": "^29.5.5",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "typescript": "^4.9.5"
   }
 }
