--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "build:safe": "tsc --skipLibCheck --noEmitOnError false",
     "build:prod": "tsc --skipLibCheck",
-    "postinstall": "npm run build:prod",
+    "postinstall": "echo 'Using pre-built dist files'",
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
