--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,5 @@
 # Production Environment Variables
-VITE_API_URL=https://hnv-backend.onrender.com/api
+VITE_API_URL=https://hnv.onrender.com/api
 VITE_APP_NAME=HNV Property Management
 VITE_APP_VERSION=1.0.0
 NODE_ENV=production
