--- a/render.yaml
+++ b/render.yaml
@@ -17,9 +17,9 @@ services:
       - key: JWT_SECRET
         generateValue: true
       - key: FRONTEND_URL
-        value: https://hnv-frontend.onrender.com
+        value: https://hnv-1-frontend.onrender.com
       - key: BACKEND_URL
-        value: https://hnv-backend.onrender.com
+        value: https://hnv.onrender.com
 
   - type: web
     name: hnv-frontend
@@ -28,7 +28,7 @@ services:
     staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_URL
-        value: https://hnv-backend.onrender.com/api
+        value: https://hnv.onrender.com/api
 
 databases:
   - name: hnv-mongodb
