--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,10 @@ services:
         value: https://hnv-1-frontend.onrender.com
       - key: BACKEND_URL
         value: https://hnv.onrender.com
+      - key: GOOGLE_CLIENT_ID
+        sync: false
+      - key: GOOGLE_CLIENT_SECRET
+        sync: false
 
   - type: web
     name: hnv-frontend
