--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,56 @@
+# Dependencies
 node_modules/
-node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production builds
+/frontend/dist/
+/backend/dist/
+build/
+out/
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Cache
+.cache/
+.parcel-cache/
+
+# Coverage
+coverage/
+
+# Zip files and build artifacts
+*.zip
+*.tar.gz
+*.tgz
+
+# Scripts that are no longer needed
+create-*.sh
+make-*.sh
+final-*.sh
+HNV-*.zip
