--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: hnv-backend
     env: node
     plan: starter
-    buildCommand: cd backend && npm install --production --ignore-scripts
-    startCommand: cd backend && npm start
+    buildCommand: cd backend && npm install && npm run build
+    startCommand: cd backend && node server.js
     envVars:
       - key: NODE_ENV
         value: production
