--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
+    "@types/stripe": "^8.0.417",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bull": "^4.11.3",
@@ -51,6 +52,7 @@
     "sharp": "^0.32.6",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
+    "stripe": "^18.2.1",
     "validator": "^13.9.0",
     "winston": "^3.8.2",
     "zod": "^3.21.4"
