--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "pdfkit": "^0.13.0",
     "qrcode": "^1.5.4",
     "redis": "^4.5.1",
+    "resend": "^4.6.0",
     "sharp": "^0.32.6",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
