--- a/render.yaml
+++ b/render.yaml
@@ -31,6 +31,23 @@ services:
       - key: CONTACT_EMAIL
         value: contact@hnvpm.com
 
+  - type: web
+    name: hnv-frontend
+    env: static
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/dist
+    envVars:
+      - key: VITE_API_URL
+        value: https://hnv-backend.onrender.com/api
+    domains:
+      - www.hnvpm.com
+      - hnvpm.com
+      - login.hnvpm.com
+      - register.hnvpm.com
+      - admin.hnvpm.com
+      - app.hnvpm.com
+      - dashboard.hnvpm.com
+
 databases:
   - name: hnv-mongodb
     databaseName: hnv-saas
