--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon server.ts",
-    "build": "tsc --project tsconfig-ultra-minimal.json --skipLibCheck --noEmitOnError false",
-    "build:safe": "tsc --skipLibCheck --noEmitOnError false",
-    "build:prod": "tsc --skipLibCheck --noEmitOnError false",
+    "build": "npx tsc --skipLibCheck --noEmitOnError false",
+    "build:safe": "npx tsc --skipLibCheck --noEmitOnError false",
+    "build:prod": "npx tsc --skipLibCheck --noEmitOnError false",
+    "postbuild": "node scripts/createBasicPlan.js && node scripts/createSuperAdmin.js",
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
@@ -56,7 +57,8 @@
     "stripe": "^18.2.1",
     "validator": "^13.9.0",
     "winston": "^3.8.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -88,7 +90,10 @@
     "prettier": "^2.8.7",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "ts-node": "^10.9.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
