--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: starter
     buildCommand: cd backend && npm install && npm run build
     startCommand: cd backend && npm start
+    healthCheckPath: /health
     envVars:
       - key: NODE_ENV
         value: production
