--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,6 @@
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.17",
-    "@types/qrcode": "^1.5.5",
-    "@types/speakeasy": "^2.0.10",
     "@types/stripe": "^8.0.417",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
@@ -55,10 +53,10 @@
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "stripe": "^18.2.1",
+    "typescript": "^4.9.5",
     "validator": "^13.9.0",
     "winston": "^3.8.2",
-    "zod": "^3.21.4",
-    "typescript": "^4.9.5"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -80,6 +78,8 @@
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/pdfkit": "^0.12.12",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^2.0.12",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
