--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,8 @@
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "stripe": "^18.2.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^4.9.5",
     "validator": "^13.9.0",
     "winston": "^3.8.2",
@@ -67,7 +69,7 @@
     "@types/express-session": "^1.18.0",
     "@types/express-slow-down": "^1.3.2",
     "@types/hpp": "^0.2.5",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.14",
     "@types/json2csv": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/marked": "^6.0.0",
@@ -80,7 +82,7 @@
     "@types/pdfkit": "^0.12.12",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^2.0.16",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -88,7 +90,7 @@
     "mongodb-memory-server": "^9.1.1",
     "nodemon": "^3.1.10",
     "prettier": "^2.8.7",
-    "supertest": "^6.3.3",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   },
