--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
     "@types/nodemailer": "^6.4.17",
     "@types/stripe": "^8.0.417",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bull": "^4.11.3",
@@ -41,6 +43,7 @@
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "passport": "^0.6.0",
