--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@types/nodemailer": "^6.4.17",
     "@types/stripe": "^8.0.417",
     "aws-sdk": "^2.1692.0",
