--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,10 +15,9 @@ BACKEND_URL=http://localhost:5001
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-# Email Configuration
-EMAIL_SERVICE=gmail
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+# Email Configuration (Resend)
+RESEND_API_KEY=re_your_resend_api_key
+EMAIL_FROM=HNV1 <noreply@yourdomain.com>
 
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID=your-aws-access-key
