--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "deploy:production": "npm run build && npm run docker:build",
     "health-check": "curl -f http://localhost:5001/health || exit 1",
     "setup": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "fix-models": "cd backend && npx ts-node scripts/fixModelsAndIndexes.ts"
+    "fix-models": "cd backend && npx ts-node scripts/fixModelsAndIndexes.ts",
+    "create-plan": "cd backend && npx ts-node scripts/createDefaultPlan.ts",
+    "fix-subscriptions": "cd backend && npx ts-node scripts/fixSubscriptionFlow.ts"
   },
   "keywords": [
     "property-management",
