--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
     "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@types/nodemailer": "^6.4.17",
     "@types/stripe": "^8.0.417",
+    "@types/twilio": "^3.19.2",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bull": "^4.11.3",
+    "cloudinary": "^2.7.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -59,6 +61,7 @@
     "stripe": "^18.2.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.7.2",
     "typescript": "^4.9.5",
     "validator": "^13.9.0",
     "winston": "^3.8.2",
