--- a/render.yaml
+++ b/render.yaml
@@ -53,7 +53,7 @@ services:
     staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_URL
-        value: https://hnv-backend.onrender.com/api
+        value: https://hnv.onrender.com/api
     domains:
       - www.hnvpm.com
       - hnvpm.com
